@@ -2,3 +2,10 @@
 
 
 a simple PostgreSQL client using JavaFX.
+
+
+### 打包
+```
+mvn clean package
+java --module-path "D:\programs\javafx-sdk-17.0.14\lib" --add-modules javafx.controls,javafx.fxml -jar target\postQ-1.0-SNAPSHOT-jar-with-dependencies.jar
+```
